@@ -1,0 +1,46 @@
+# Copyright 2004 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+
+# Please email any bugs, comments, and/or additions to this file to:
+# bug-gdb@gnu.org
+
+# This is a test for the gdb invocation option -l.
+
+if $tracelevel then {
+    strace $tracelevel
+}
+
+
+global GDBFLAGS
+
+# Skip test if target does not support argument passing.
+if [target_info exists noargs] {
+    return;
+}
+
+#
+# Test that -l is processed correctly.
+#
+set old_gdbflags $GDBFLAGS
+set GDBFLAGS "-l 42"
+gdb_exit
+gdb_start
+gdb_test "show remotetimeout" \
+	"Timeout limit to wait for target to respond is 42\." \
+	"correct remotetimeout printed"
+
+set GDBFLAGS $old_gdbflags
+
